# path-integral-monte-carlo

./: .gitignore  CMakeLists.txt  histogram.py  input.xml  input_pimc.xml  input_wigner.xml  pimc.sublime-project  pimc.sublime-workspace
clusters/: Ne13_angstrom.xyz  Ne13_bohr.xyz  optimize_LJ
examples/Ne/atomic_units/: Ne13_bohr.xyz  input_pimc.xml
examples/Ne/atomic_units/classical/: input_pimc.xml
examples/Ne/fancy_units/: input_pimc.xml
examples/fbsd/: input_pimc.xml  input_wigner.xml  plot.py
examples/morse/: input_pimc.xml  input_wigner.xml  plot.py
examples/skewed/: input_pimc.xml  input_wigner.xml  plot.py
src/: .clang-format  configuration.cpp  configuration.hpp  estimators.hpp  main.cpp  moves.hpp  output.cpp  output.hpp  pi_wigner_config.cpp  pi_wigner_config.hpp  pimc.cpp  pimc.cxx  potentials.hpp  propagators.hpp  random.cpp  random.hpp  simulation.cpp  simulation.hpp  spdlog.cpp  units.cpp  units.hpp  utilities.cpp  utilities.hpp
src/.cache/clangd/index/: ansicolor_sink.h.5E35EB5D7D3DA999.idx  base_sink.h.92CEB66D295F2656.idx  basic_file_sink.h.F77D875CD9093546.idx  boundary_conditions.hpp.B0329582891519F5.idx  common.h.49F998A742629583.idx  configuration.hpp.CF2ED536F40C8EE7.idx  console_globals.h.25C6D885122EB3D7.idx  core.h.E76A3EF4B50BB1E8.idx  estimator.hpp.C78F5A2CF7BC580C.idx  file_helper.h.D8D86C084D666736.idx  fmt.h.D8E32AB23A238061.idx  format.h.3F1426CDEE4612FD.idx  formatter.h.8D481B98F1FA50F1.idx  g_r.cpp.A79930E04F6A8461.idx  g_r.hpp.50E7C524E6DF2C48.idx  kinetic_energy.cpp.413F7CDAF9C0D038.idx  kinetic_energy.hpp.589A1A648E754B34.idx  log_msg.h.2D9E1D0B98CA16AA.idx  logger.h.AF1CECEB63C6A33D.idx  morse.cpp.D971CDA47236B630.idx  morse.hpp.E9E4BB1FDF92533D.idx  move.cpp.0D12CDA5DB0B4F5C.idx  move.hpp.8B2A85DF0DD0179D.idx  null_mutex.h.F90EC6BC1D0CF448.idx  output.hpp.9F366DAFFA9000AA.idx  pi_wigner_config.cpp.DD9CEDD09C9FC934.idx  pi_wigner_config.hpp.FD8222BA2F7F654B.idx  polynomial.cpp.4E524A3E538D589C.idx  polynomial.hpp.EAEB426221DD87B4.idx  potential.cpp.7864C64DCE379538.idx  potential.hpp.CB71BF46EF2A7837.idx  propagator.hpp.3C128E373B99A14F.idx  random.cpp.933112310FC51D7D.idx  random.hpp.B84809E046AB50C1.idx  registry.h.0930BDD5F46AED6E.idx  simulation.cpp.EEC13BEE9AE109EB.idx  simulation.hpp.92A3DCEF2D6AD641.idx  sink.h.64067B39D50BCE7A.idx  spdlog.h.59287D9DFD30922A.idx  stdout_color_sinks.h.BDB11E100CA66E1D.idx  (+6 more)
src/.clangd/index/: G2.hpp.7321B59092BE63D2.idx  G4.hpp.E0796859A6D1B73D.idx  G6.hpp.3F064518120451AD.idx  G8.hpp.2CB2824E1B94F42C.idx  WignerG2.hpp.8F295568B22CCA98.idx  WignerKE.hpp.D7ABD6E611F8263D.idx  ansicolor_sink-inl.h.8696DAD480588AB0.idx  ansicolor_sink.h.5E35EB5D7D3DA999.idx  async.h.73635046E1A77C9E.idx  async_logger-inl.h.A82FFCBE825ADF6D.idx  async_logger.h.7E67B8C12D1E61D1.idx  base_sink-inl.h.CAB3407D889D42EC.idx  base_sink.h.92CEB66D295F2656.idx  basic_file_sink-inl.h.46CD5127E0F0FD9D.idx  basic_file_sink.h.F77D875CD9093546.idx  boundary_conditions.cpp.219DBBE931525C80.idx  boundary_conditions.hpp.B0329582891519F5.idx  brownian_bridge.cpp.D155C8D9D6FFEDBB.idx  brownian_bridge.hpp.2B2933AD9220B914.idx  circular_q.h.F168EB7E31DD9725.idx  common-inl.h.CF824E049A1B200C.idx  common.h.49F998A742629583.idx  configuration.cpp.828E5AB2687395C1.idx  configuration.hpp.CF2ED536F40C8EE7.idx  console_globals.h.25C6D885122EB3D7.idx  core.h.E76A3EF4B50BB1E8.idx  cv.cpp.AB932A27C6158A5F.idx  cv.hpp.9276735F8D0875A8.idx  end_pt_distance.cpp.3B72168271E6C61E.idx  end_pt_distance.hpp.DA856C901EAAE022.idx  estimator.cpp.74BA86684C8D7CB6.idx  estimator.hpp.C78F5A2CF7BC580C.idx  file_helper-inl.h.EA0F600D7934003C.idx  file_helper.h.D8D86C084D666736.idx  fmt.h.D8E32AB23A238061.idx  fmt_helper.h.15CC759D238CC614.idx  format-inl.h.E1B2A5EE61EEB593.idx  format.h.3F1426CDEE4612FD.idx  formatter.h.8D481B98F1FA50F1.idx  g_props.cpp.C7280B4880F7ACB3.idx  (+78 more)
src/boundary_conditions/: boundary_conditions.cpp  boundary_conditions.hpp  open_boundary_conditions.cpp  open_boundary_conditions.hpp  periodic_boundary_conditions.cpp  periodic_boundary_conditions.hpp
src/estimator/: cv.cpp  cv.hpp  end_pt_distance.cpp  end_pt_distance.hpp  estimator.cpp  estimator.hpp  g_r.cpp  g_r.hpp  kinetic_energy.cpp  kinetic_energy.hpp  position_correlation.cpp  position_correlation.hpp  potential_energy.cpp  potential_energy.hpp  s_k.cpp  s_k.hpp  virial_kinetic_energy.cpp  virial_kinetic_energy.hpp
src/move/: brownian_bridge.cpp  brownian_bridge.hpp  move.cpp  move.hpp  translate.cpp  translate.hpp  wigner_momentum.cpp  wigner_momentum.hpp  wigner_position.cpp  wigner_position.hpp
src/potential/: harmonic.cpp  harmonic.hpp  lennardjones.cpp  lennardjones.hpp  morse.cpp  morse.hpp  polynomial.cpp  polynomial.hpp  potential.cpp  potential.hpp
src/propagator/: G2.hpp  G4.hpp  G6.hpp  G8.hpp  WignerG2.hpp  WignerKE.hpp  g_props.cpp  propagator.cpp  propagator.hpp  wigner_props.cpp
